--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
+
 /env
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
